--- a/PyData2016_JuliaDataScience/Slides.ipynb
+++ b/PyData2016_JuliaDataScience/Slides.ipynb
@@ -14,7 +14,9 @@
     "\n",
     "- Josh Day\n",
     "- GitHub: `@joshday`\n",
-    "- Email: `emailjoshday@gmail.com`"
+    "- Email: `emailjoshday@gmail.com`\n",
+    "\n",
+    "https://github.com/joshday/Talks/"
    ]
   },
   {
@@ -536,7 +538,7 @@
     "# [PyCall](https://github.com/JuliaPy/PyCall.jl)\n",
     "\n",
     "- Call Python from Julia\n",
-    "- Heavily used, some packages depend heavily/entirely on PyCall\n",
+    "- Heavily used, some packages depend mostly on PyCall\n",
     "    - [PyPlot.jl](https://github.com/JuliaPy/PyPlot.jl)\n",
     "    - [ScikitLearn.jl](https://github.com/cstjean/ScikitLearn.jl)\n",
     "        - Supports Models from both Python and Julia"
@@ -1288,7 +1290,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Julia 0.5.0-rc3",
+   "display_name": "Julia 0.5.1-pre",
    "language": "julia",
    "name": "julia-0.5"
   },
@@ -1296,7 +1298,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.5.0"
+   "version": "0.5.1"
   }
  },
  "nbformat": 4,
