--- a/ICSA2016_OnlineMM/slides/slides.tex
+++ b/ICSA2016_OnlineMM/slides/slides.tex
@@ -68,7 +68,7 @@
 \title[Online MM]{Online MM Algorithms for Machine Learning}
 \author{Josh Day}
 \institute[NC State University]{NC State University \\ \textit{jtday2@ncsu.edu}}
-\date{\today}
+\date{December 21, 2016}
 
 \begin{document}
 
