--- a/ICSA2016_OnlineMM/slides/slides.tex
+++ b/ICSA2016_OnlineMM/slides/slides.tex
@@ -270,7 +270,7 @@
 \end{frame}
 \begin{frame}
   \begin{itemize}
-    \item Online MM with Quadratic Upper Bound is
+    \item Type 2 Online MM with Quadratic Upper Bound is
     $$\iter{\bm\theta}{t} = \bm A_t^{-1}\bm b_t,$$
     where
     $$\begin{aligned}
