add StatGenWorkshop talk

--- a/PyData2016_JuliaDataScience/Slides.ipynb
+++ b/PyData2016_JuliaDataScience/Slides.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -306,18 +306,12 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "myquantile(dist,0.75) = 6.274430698436519\n",
-      "quantile(dist,0.75) = 6.2744306984446885\n",
-      "\n",
-      "myquantile(dist,0.75) = 0.6744897501960708\n",
-      "quantile(dist,0.75) = 0.6744897501960817\n",
-      "\n",
-      "myquantile(dist,0.75) = 0.45418056477357555\n",
-      "quantile(dist,0.75) = 0.4541805647736157\n",
-      "\n"
+     "ename": "LoadError",
+     "evalue": "UndefVarError: UnivariateDistribution not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: UnivariateDistribution not defined",
+      ""
      ]
     }
    ],
@@ -333,7 +327,7 @@
     "    θ\n",
     "end\n",
     "\n",
-    "for dist in [Gamma(5, 1), Normal(0, 1), Beta(2, 4)]\n",
+    "for dist in [Gamma(5, 1), Normal(0, 1), Beta(2, 4), Cauchy(0,4)]\n",
     "    @show myquantile(dist, .75)\n",
     "    @show quantile(dist, .75)\n",
     "    println()\n",
@@ -1290,7 +1284,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Julia 0.5.1-pre",
+   "display_name": "Julia 0.5.1",
    "language": "julia",
    "name": "julia-0.5"
   },
