--- a/JuliaHighPerformance/JuliaHighPerformance.ipynb
+++ b/JuliaHighPerformance/JuliaHighPerformance.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "This notebook: http://tinyurl.com/j8myl7y\n",
-    "\n",
     "To use this notebook, several packages will need to be installed:\n",
     "\n",
     "```julia\n",
@@ -19,17 +21,26 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "\n",
     "<img src=\"https://a248.e.akamai.net/secure.meetupstatic.com/photos/event/7/c/8/0/highres_328291872.jpeg\" alt=\"Mountain View\" style=\"width:200px;\">\n",
     "\n",
     "### Josh Day\n",
     "- GitHub: https://github.com/joshday\n",
     "- email: emailjoshday@gmail.com\n",
-    "\n",
+    "\u001f"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Learning Julia Resources:\n",
     "\n",
     "- http://julialang.org/learning/\n",
@@ -4646,6 +4657,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Julia 0.5.1",
    "language": "julia",
