--- a/ODSC2018_JuliaDB_OnlineStats/2. JuliaDB + OnlineStats in Parallel.ipynb
+++ b/ODSC2018_JuliaDB_OnlineStats/2. JuliaDB + OnlineStats in Parallel.ipynb
@@ -4,9 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Last week on the Julia slack:\n",
+    "![](slack.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Distributed Tables\n",
     "\n",
-    "### Running JuliaDB in parallel is available at the \"flick of a switch\":"
+    "## Flip the switch\n",
+    "\n",
+    "- `addprocs` automatically adds the number of CPU cores available"
    ]
   },
   {
@@ -50,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### After `addprocs`, `loadtable` produces a DTable"
+    "### After `addprocs`, `loadtable` produces a DTable!"
    ]
   },
   {
@@ -109,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +138,7 @@
        "\"tsla.us.txt\"   Mean: n=1858 | value=4.41651"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,12 +151,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Now let's save the table to disk"
+    "# How does this work?\n",
+    "\n",
+    "A statistic/model and OnlineStats can be `fit!`-ted with more data and `merge!`-ed together with another of the same kind. \n",
+    "\n",
+    "<img src=\"https://user-images.githubusercontent.com/8075494/32748459-519986e8-c88a-11e7-89b3-80dedf7f261b.png\" width=600>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Now let's save the table to disk\n",
+    "\n",
+    "(You should really only load a CSV **once**)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +205,7 @@
        "⋮"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
