--- a/JuliaCon2018_JuliaDB+OnlineStats/Example.ipynb
+++ b/JuliaCon2018_JuliaDB+OnlineStats/Example.ipynb
@@ -32,7 +32,8 @@
     {
      "data": {
       "text/plain": [
-       "11-element Array{String,1}:\n",
+       "12-element Array{String,1}:\n",
+       " \"/Users/joshday/datasets/taxi/yellow_tripdata_2017-01.csv\"\n",
        " \"/Users/joshday/datasets/taxi/yellow_tripdata_2017-02.csv\"\n",
        " \"/Users/joshday/datasets/taxi/yellow_tripdata_2017-03.csv\"\n",
        " \"/Users/joshday/datasets/taxi/yellow_tripdata_2017-04.csv\"\n",
@@ -52,14 +53,14 @@
     }
    ],
    "source": [
-    "files = glob(\"*.csv\", \"/Users/joshday/datasets/taxi/\")[end-10:end]"
+    "files = glob(\"*.csv\", \"/Users/joshday/datasets/taxi/\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load dataset larger than memory (<3 minutes)"
+    "# Load dataset larger than memory (under 3 minutes)"
    ]
   },
   {
@@ -70,7 +71,7 @@
     {
      "data": {
       "text/plain": [
-       "Distributed Table with 103786750 rows in 11 chunks:\n",
+       "Distributed Table with 113496874 rows in 12 chunks:\n",
        "Columns:\n",
        "\u001b[1m#   \u001b[22m\u001b[1mcolname                \u001b[22m\u001b[1mtype\u001b[22m\n",
        "───────────────────────────────────\n",
@@ -102,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "147.683731 seconds (3.32 M allocations: 181.816 MiB, 0.17% gc time)\n"
+      "152.603136 seconds (3.32 M allocations: 182.853 MiB, 0.25% gc time)\n"
      ]
     }
    ],
@@ -114,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Kill the Kernel, Restart Julia, Load Table from Binary"
+    "# Restart Julia, Load Table from Binary"
    ]
   },
   {
@@ -125,7 +126,7 @@
     {
      "data": {
       "text/plain": [
-       "Distributed Table with 103786750 rows in 11 chunks:\n",
+       "Distributed Table with 113496874 rows in 12 chunks:\n",
        "Columns:\n",
        "\u001b[1m#   \u001b[22m\u001b[1mcolname                \u001b[22m\u001b[1mtype\u001b[22m\n",
        "───────────────────────────────────\n",
@@ -157,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.314782 seconds (130.26 k allocations: 6.893 MiB)\n"
+      "  0.320673 seconds (130.31 k allocations: 6.894 MiB)\n"
      ]
     }
    ],
@@ -184,7 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 38.113225 seconds (1.78 M allocations: 98.364 MiB)\n"
+      " 42.047238 seconds (1.78 M allocations: 96.567 MiB)\n"
      ]
     },
     {
@@ -193,16 +194,16 @@
        "Distributed Table with 11 rows in 1 chunks:\n",
        "\u001b[1mpassenger_count  \u001b[22mMean\n",
        "─────────────────────────────────────────────────\n",
-       "0                Mean: n=165554 | value=13.3116\n",
-       "1                Mean: n=74072569 | value=12.9409\n",
-       "2                Mean: n=15143017 | value=13.7458\n",
-       "3                Mean: n=4357927 | value=13.536\n",
-       "4                Mean: n=2075625 | value=13.8076\n",
-       "5                Mean: n=4922074 | value=13.0787\n",
-       "6                Mean: n=3049058 | value=13.0415\n",
-       "7                Mean: n=338 | value=43.7983\n",
-       "8                Mean: n=317 | value=45.7156\n",
-       "9                Mean: n=270 | value=54.5304\n",
+       "0                Mean: n=166086 | value=13.3626\n",
+       "1                Mean: n=81034106 | value=12.8784\n",
+       "2                Mean: n=16545529 | value=13.657\n",
+       "3                Mean: n=4748847 | value=13.5801\n",
+       "4                Mean: n=2257808 | value=13.7136\n",
+       "5                Mean: n=5407303 | value=13.012\n",
+       "6                Mean: n=3336197 | value=12.9714\n",
+       "7                Mean: n=360 | value=43.7429\n",
+       "8                Mean: n=339 | value=45.4509\n",
+       "9                Mean: n=298 | value=55.4761\n",
        "192              Mean: n=1 | value=6.5"
       ]
      },
