--- a/2017/Julia Introduction (30 min)/Introduction to Julia.ipynb
+++ b/2017/Julia Introduction (30 min)/Introduction to Julia.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -302,7 +302,7 @@
        "f (generic function with 1 method)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "define double @julia_f_61351(double) #0 !dbg !5 {\n",
+      "define double @julia_f_62869(double) #0 !dbg !5 {\n",
       "top:\n",
       "  %1 = fmul double %0, %0\n",
       "  ret double %1\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "define i64 @julia_f_61422(i64) #0 !dbg !5 {\n",
+      "define i64 @julia_f_62877(i64) #0 !dbg !5 {\n",
       "top:\n",
       "  %1 = mul i64 %0, %0\n",
       "  ret i64 %1\n",
@@ -435,7 +435,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.6.2-pre",
+   "display_name": "Julia 0.6.3",
    "language": "julia",
    "name": "julia-0.6"
   },
@@ -443,7 +443,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.6.2"
+   "version": "0.6.3"
   }
  },
  "nbformat": 4,
