--- a/2017/Julia Tutorial (60 min)/Julia Tutorial (60 min).ipynb
+++ b/2017/Julia Tutorial (60 min)/Julia Tutorial (60 min).ipynb
@@ -8926,7 +8926,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.6.1-pre",
+   "display_name": "Julia 0.6.3",
    "language": "julia",
    "name": "julia-0.6"
   },
@@ -8934,7 +8934,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.6.1"
+   "version": "0.6.3"
   }
  },
  "nbformat": 4,
