--- a/2018/CMO_2018_JuliaDB_OnlineStats/2. OnlineStats.ipynb
+++ b/2018/CMO_2018_JuliaDB_OnlineStats/2. OnlineStats.ipynb
@@ -1021,7 +1021,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.6.2-pre",
+   "display_name": "Julia 0.6.3",
    "language": "julia",
    "name": "julia-0.6"
   },
@@ -1029,7 +1029,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.6.2"
+   "version": "0.6.3"
   }
  },
  "nbformat": 4,
