--- a/2018/IntroToJulia/02.  How do I?.ipynb
+++ b/2018/IntroToJulia/02.  How do I?.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "Mean: n=10 | value=5.5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "Mean: n=10 | value=5.5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,18 +109,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "2×2 Array{Float64,2}:\n",
-       " -1.27558    -0.48719 \n",
-       "  0.0488727  -0.402804"
+       "  1.10564    0.849951\n",
+       " -0.864244  -0.282422"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,18 +138,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "2×2 Array{Float64,2}:\n",
-       " -1.27558    -0.48719 \n",
-       "  0.0488727  -0.402804"
+       "  1.10564    0.849951\n",
+       " -0.864244  -0.282422"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,32 +170,40 @@
    "source": [
     "# Work with Tabular Data?\n",
     "\n",
-    "- Use **JuliaDB**...which isn't ready for Julia 1.0 yet 😞\n",
+    "- Use [**JuliaDB**](https://github.com/JuliaComputing/JuliaDB.jl)...which isn't ready for Julia 1.0 yet 😞\n",
     "    - Type stable operations\n",
     "    - Can work with data out-of-core (larger than memory)\n",
-    "- Until it's updated, use **DataFrames**"
+    "- Until it's updated, use [**DataFrames**](https://github.com/JuliaData/DataFrames.jl)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Recompiling stale cache file /Users/joshday/.julia/compiled/v1.0/CSV/HHBkp.ji for CSV [336ed68f-0bac-5ca0-87d4-7b16caf5d00b]\n",
+      "└ @ Base loading.jl:1184\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<table class=\"data-frame\"><thead><tr><th></th><th>Column1</th><th>Column2</th></tr></thead><tbody><tr><th>1</th><td>-1.27558</td><td>-0.48719</td></tr><tr><th>2</th><td>0.0488727</td><td>-0.402804</td></tr></tbody></table>"
+       "<table class=\"data-frame\"><thead><tr><th></th><th>Column1</th><th>Column2</th></tr></thead><tbody><tr><th>1</th><td>1.10564</td><td>0.849951</td></tr><tr><th>2</th><td>-0.864244</td><td>-0.282422</td></tr></tbody></table>"
       ],
       "text/plain": [
        "2×2 DataFrames.DataFrame\n",
        "│ Row │ Column1   │ Column2   │\n",
        "│     │ \u001b[90mFloat64⍰\u001b[39m  │ \u001b[90mFloat64⍰\u001b[39m  │\n",
        "├─────┼───────────┼───────────┤\n",
-       "│ 1   │ -1.27558  │ -0.48719  │\n",
-       "│ 2   │ 0.0488727 │ -0.402804 │"
+       "│ 1   │ 1.10564   │ 0.849951  │\n",
+       "│ 2   │ -0.864244 │ -0.282422 │"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,12 +218,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run a Regression?"
+    "# Run a Regression?\n",
+    "\n",
+    "- [GLM.jl](https://github.com/JuliaStats/GLM.jl)\n",
+    "- [SparseRegression.jl](https://github.com/joshday/SparseRegression.jl)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,21 +235,21 @@
        "LinearModel{LmResp{Array{Float64,1}},DensePredChol{Float64,LinearAlgebra.Cholesky{Float64,Array{Float64,2}}}}:\n",
        "\n",
        "Coefficients:\n",
-       "        Estimate Std.Error   t value Pr(>|t|)\n",
-       "x1    -0.0287894 0.0304312 -0.946049   0.3444\n",
-       "x2    0.00582576 0.0312108  0.186659   0.8520\n",
-       "x3     0.0196215 0.0312664  0.627559   0.5304\n",
-       "x4     0.0138451 0.0310414   0.44602   0.6557\n",
-       "x5    -0.0596227 0.0298185  -1.99952   0.0458\n",
-       "x6   -0.00609401 0.0316865 -0.192322   0.8475\n",
-       "x7    -0.0290076 0.0307678 -0.942788   0.3460\n",
-       "x8    -0.0105224 0.0321785 -0.327001   0.7437\n",
-       "x9      0.015079 0.0302014  0.499282   0.6177\n",
-       "x10   0.00471741 0.0307989  0.153168   0.8783\n",
+       "     Estimate Std.Error t value Pr(>|t|)\n",
+       "x1     1.0012 0.0327353 30.5847   <1e-99\n",
+       "x2    2.04848 0.0317879 64.4422   <1e-99\n",
+       "x3    2.99034 0.0310745 96.2316   <1e-99\n",
+       "x4    3.97008 0.0315312  125.91   <1e-99\n",
+       "x5    5.00844 0.0318474 157.264   <1e-99\n",
+       "x6    5.91716 0.0319146 185.406   <1e-99\n",
+       "x7    7.03647 0.0313516 224.438   <1e-99\n",
+       "x8     8.0028 0.0321214 249.142   <1e-99\n",
+       "x9     9.0474 0.0308158 293.596   <1e-99\n",
+       "x10   9.98177 0.0323964 308.113   <1e-99\n",
        "\n"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,9 +257,80 @@
    "source": [
     "using GLM\n",
     "\n",
-    "x, y = randn(1000, 10), randn(1000)\n",
+    "x = randn(1000, 10)\n",
+    "y = x * (1:10) + randn(1000)\n",
     "\n",
     "lm(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Sweep finished\n",
+      "└ @ LearningStrategies /Users/joshday/.julia/packages/LearningStrategies/HcQtL/src/LearningStrategies.jl:151\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SModel\n",
+       "  > abs.(β)  : ▁▂▃▃▄▅▅▆▇▇\n",
+       "  > λ factor : [0.1 0.1 … 0.1 0.1]\n",
+       "  > Loss     : L2DistLoss\n",
+       "  > Penalty  : NoPenalty\n",
+       "  > Data\n",
+       "    - x : 1000×10 Array{Float64,2}\n",
+       "    - y : 1000-element Array{Float64,1}\n",
+       "    - w : Nothing"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "using SparseRegression\n",
+    "\n",
+    "s = SModel(x, y, L2DistLoss(), NoPenalty())\n",
+    "learn!(s)\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10-element Array{Float64,1}:\n",
+       " 1.0011981243855999\n",
+       " 2.0484824580903056\n",
+       " 2.9903449687673374\n",
+       " 3.970081217508286 \n",
+       " 5.008438030481087 \n",
+       " 5.917161683667482 \n",
+       " 7.0364711499958315\n",
+       " 8.002803390679796 \n",
+       " 9.047402338760243 \n",
+       " 9.981767131177302 "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coef(s)"
    ]
   }
  ],
