--- a/2018/IntroToJulia/01. Intro.ipynb
+++ b/2018/IntroToJulia/01. Intro.ipynb
@@ -36,7 +36,12 @@
     "- [https://juliaobserver.com/](https://juliaobserver.com/) (finding packages)\n",
     "- [https://discourse.julialang.org](https://discourse.julialang.org) (ask for help)\n",
     "- [http://julialang.slack.com/](http://julialang.slack.com/) (ask for help)\n",
-    "- [https://docs.julialang.org/en/](https://docs.julialang.org/en/) (documentation)"
+    "- [https://docs.julialang.org/en/](https://docs.julialang.org/en/) (documentation)\n",
+    "\n",
+    "\n",
+    "- Note: If looking for Julia tutorials, check the date they were created and the Julia version used.\n",
+    "    - Julia 1.0 has very few deprecation warnings (use Julia 0.7 as a stepping stone)\n",
+    "    - Some syntax is broken between Julia 0.6 and Julia 1.0!"
    ]
   },
   {
