--- a/2018/IntroToJulia/01. Intro.ipynb
+++ b/2018/IntroToJulia/01. Intro.ipynb
@@ -1238,9 +1238,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ArgumentError",
+     "evalue": "ArgumentError: Package Interact not found in current path:\n- Run `import Pkg; Pkg.add(\"Interact\")` to install the Interact package.\n",
+     "output_type": "error",
+     "traceback": [
+      "ArgumentError: Package Interact not found in current path:\n- Run `import Pkg; Pkg.add(\"Interact\")` to install the Interact package.\n",
+      "",
+      "Stacktrace:",
+      " [1] require(::Module, ::Symbol) at ./loading.jl:823",
+      " [2] top-level scope at In[1]:1"
+     ]
+    }
+   ],
    "source": [
     "using Interact, Plots, Random\n",
     "\n",
@@ -1250,19 +1263,26 @@
     "    plot!(sin, 0, i)\n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.0.0",
+   "display_name": "Julia 1.1.1",
    "language": "julia",
-   "name": "julia-1.0"
+   "name": "julia-1.1"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.0.0"
+   "version": "1.1.1"
   }
  },
  "nbformat": 4,
