--- a/2020/StreamingDataWebinar/Examples.ipynb
+++ b/2020/StreamingDataWebinar/Examples.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Dates, CSV, JuliaDB, OnlineStats, Plots, PlotThemes, Interact\n",
+    "using Dates, CSV, JuliaDB, Plots, PlotThemes, Interact, HTTP, SingularSpectrumAnalysis\n",
+    "using Revise, OnlineStats\n",
     "theme(:dark)"
    ]
   },
@@ -14,17 +15,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Big Data Visualization Tools"
+    "# OnlineStats and Big Data Viz"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `OnlineStats.Partition`\n",
+    "## `Partition` and `IndexedPartition`\n",
     "\n",
     "- Plot any-sized dataset.\n",
-    "- Here's a plot of 100 Million observations:"
+    "- Here are two plots with **100 Million observations**:"
    ]
   },
   {
@@ -33,12 +34,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "o = Partition(Series(Mean(), Extrema()), 200)\n",
+    "o = Partition(Series(Mean(), Extrema()))\n",
     "\n",
     "y = randn()\n",
     "\n",
     "for _ in 1:10^8\n",
     "    fit!(o,  y += randn())\n",
+    "end\n",
+    "\n",
+    "plot(o)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o = IndexedPartition(Float64, KHist(10))\n",
+    "\n",
+    "for _ in 1:10^8\n",
+    "    fit!(o,  (randn(), randn()))\n",
     "end\n",
     "\n",
     "plot(o)"
@@ -175,15 +191,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using JuliaDB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "t = loadtable(path, filenamecol = :stock)"
    ]
   },
@@ -214,12 +221,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "temp = groupreduce(IndexedPartition(Date, Extrema(),50), t, :stock, select=(:Date, :Open))"
+    "### Make All Plots at Once"
    ]
   },
   {
@@ -228,11 +233,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Interact\n",
-    "\n",
-    "@manipulate for i in 1:7163\n",
-    "    plot(temp[i].IndexedPartition, title=temp[i])\n",
+    "allplots = groupreduce(IndexedPartition(Date, Extrema()), t, :stock, select=(:Date, :Close))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "@manipulate for s in [\"aapl\", \"msft\", \"ibm\", \"googl\", \"nflx\"]\n",
+    "    t2 = filter(==(\"$s.us.txt\"), allplots, select=:stock)\n",
+    "    plot(t2[1].IndexedPartition, title=s)\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Singular Spectrum Analysis\n",
+    "\n",
+    "- Extract seasonal components out of a time series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = filter(==(\"aapl.us.txt\"), t, select=:stock)\n",
+    "\n",
+    "yt, ys = analyze(select(temp, :Close), 90)\n",
+    "plot(yt, lab=\"Trend\")\n",
+    "plot!(ys, lab=\"Season\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Autocorrelation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "temp = filter(==(\"aapl.us.txt\"), t, select=:stock)\n",
+    "\n",
+    "\n",
+    "plot(fit!(AutoCov(365), select(temp, :Close)))"
    ]
   },
   {
@@ -252,17 +310,9 @@
     "    endpoint = \"https://webrates.truefx.com/rates/connect.html?f=csv&$q\"\n",
     "    hdr = [:pair, :utc, :big_bid_figure, :bid_points, :offer_bid_figure,\n",
     "           :offer_points, :high, :low, :open]\n",
-    "    CSV.read(download(endpoint); header=hdr, footerskip=1)\n",
+    "    r = HTTP.get(endpoint)\n",
+    "    CSV.read(r.body; header=hdr, footerskip=1)\n",
     "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_data()"
    ]
   },
   {
@@ -280,10 +330,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using OnlineStats, Plots\n",
-    "theme(:juno)\n",
-    "gr()\n",
-    "\n",
     "o = IndexedPartition(Int, Extrema(), 10)\n",
     "\n",
     "while true\n",
@@ -293,6 +339,13 @@
     "    display(plot(o, xlab=\"UTC Time\", ylab=\"Bid Points\", title=\"nobs = $(nobs(o))\"))\n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
