wip convert talk to Pluto

--- a/2020/StreamingDataWebinar/Examples.ipynb
+++ b/2020/StreamingDataWebinar/Examples.ipynb
@@ -2,9 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling CSV [336ed68f-0bac-5ca0-87d4-7b16caf5d00b]\n",
+      "└ @ Base loading.jl:1273\n",
+      "┌ Info: Precompiling JuliaDB [a93385a2-3734-596a-9a66-3cfbb77141e6]\n",
+      "└ @ Base loading.jl:1273\n",
+      "ERROR: LoadError: LoadError: UndefVarError: Split not defined\n",
+      "Stacktrace:\n",
+      " [1] top-level scope at /Users/joshday/.julia/dev/OnlineStats/src/ml/trees.jl:36\n",
+      " [2] include at ./boot.jl:328 [inlined]\n",
+      " [3] include_relative(::Module, ::String) at ./loading.jl:1105\n",
+      " [4] include at ./Base.jl:31 [inlined]\n",
+      " [5] include(::String) at /Users/joshday/.julia/dev/OnlineStats/src/OnlineStats.jl:1\n",
+      " [6] top-level scope at /Users/joshday/.julia/dev/OnlineStats/src/OnlineStats.jl:102\n",
+      " [7] include at ./boot.jl:328 [inlined]\n",
+      " [8] include_relative(::Module, ::String) at ./loading.jl:1105\n",
+      " [9] include(::Module, ::String) at ./Base.jl:31\n",
+      " [10] top-level scope at none:2\n",
+      " [11] eval at ./boot.jl:330 [inlined]\n",
+      " [12] eval(::Expr) at ./client.jl:425\n",
+      " [13] top-level scope at ./none:3\n",
+      "in expression starting at /Users/joshday/.julia/dev/OnlineStats/src/ml/trees.jl:36\n",
+      "in expression starting at /Users/joshday/.julia/dev/OnlineStats/src/OnlineStats.jl:102\n",
+      "ERROR: LoadError: Failed to precompile OnlineStats [a15396b6-48d5-5d58-9928-6d29437db91e] to /Users/joshday/.julia/compiled/v1.3/OnlineStats/G3mU6_wM9Rk.ji.\n",
+      "Stacktrace:\n",
+      " [1] error(::String) at ./error.jl:33\n",
+      " [2] compilecache(::Base.PkgId, ::String) at ./loading.jl:1283\n",
+      " [3] _require(::Base.PkgId) at ./loading.jl:1024\n",
+      " [4] require(::Base.PkgId) at ./loading.jl:922\n",
+      " [5] require(::Module, ::Symbol) at ./loading.jl:917\n",
+      " [6] include at ./boot.jl:328 [inlined]\n",
+      " [7] include_relative(::Module, ::String) at ./loading.jl:1105\n",
+      " [8] include(::Module, ::String) at ./Base.jl:31\n",
+      " [9] top-level scope at none:2\n",
+      " [10] eval at ./boot.jl:330 [inlined]\n",
+      " [11] eval(::Expr) at ./client.jl:425\n",
+      " [12] top-level scope at ./none:3\n",
+      "in expression starting at /Users/joshday/.julia/packages/JuliaDB/7cG1k/src/JuliaDB.jl:21\n"
+     ]
+    },
+    {
+     "ename": "ErrorException",
+     "evalue": "Failed to precompile JuliaDB [a93385a2-3734-596a-9a66-3cfbb77141e6] to /Users/joshday/.julia/compiled/v1.3/JuliaDB/4FA8g_wM9Rk.ji.",
+     "output_type": "error",
+     "traceback": [
+      "Failed to precompile JuliaDB [a93385a2-3734-596a-9a66-3cfbb77141e6] to /Users/joshday/.julia/compiled/v1.3/JuliaDB/4FA8g_wM9Rk.ji.",
+      "",
+      "Stacktrace:",
+      " [1] error(::String) at ./error.jl:33",
+      " [2] compilecache(::Base.PkgId, ::String) at ./loading.jl:1283",
+      " [3] _require(::Base.PkgId) at ./loading.jl:1024",
+      " [4] require(::Base.PkgId) at ./loading.jl:922",
+      " [5] require(::Module, ::Symbol) at ./loading.jl:917",
+      " [6] top-level scope at In[1]:1"
+     ]
+    }
+   ],
    "source": [
     "using Dates, CSV, JuliaDB, Plots, PlotThemes, Interact, \n",
     "    HTTP, SingularSpectrumAnalysis, ProgressMeter\n",
